--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Main
-# on:
-#   push:
-#     branches:
-#       - main
-
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
