use cdn api for boxscore

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "program": "cmd/server",
             "env" : {
                 "NBA_BASE_URL": "https://stats.nba.com",
+                "NBA_CDN_BASE_URL": "https://cdn.nba.com",
             }
         }
     ]
