--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  REPO_OWNER: ${{ github.repository_owner }}
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
@@ -52,6 +53,6 @@ jobs:
       - name: Deploy api
         run: |
           flyctl deploy --now -a prod-nba-stats-api \
-            -i ${{ env.REGISTRY }}/weneedthepoh/nba-stats-api:${{ github.sha }} \
+            -i ${{ env.REGISTRY }}/${{ env.REPO_OWNER }}/nba-stats-api:${{ github.sha }} \
             -e NBA_BASE_URL=https://stats.nba.com \
             -e NBA_CDN_BASE_URL=https://cdn.nba.com
