--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cloudflare-warp
           sudo warp-cli --accept-tos registration new
-          sudo warp-cli --accept-tos mode warp+doh
+          sudo warp-cli --accept-tos set-mode warp+doh
           sudo warp-cli --accept-tos connect
 
       - name: Setup terraform
