--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,6 +92,11 @@ jobs:
           sudo apt-get install -y cloudflare-warp
           sudo warp-cli --accept-tos registration new
           sudo warp-cli --accept-tos mode warp+doh
+          if [ "${{ inputs.stack }}" == 'ipv4' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range ::0/0
+          elif [ "${{ inputs.stack }}" == 'ipv6' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range 0.0.0.0/0
+          fi
           sudo warp-cli --accept-tos connect
 
       - name: Setup terraform
