--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -69,8 +69,13 @@ jobs:
           echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
           sudo apt-get update
           sudo apt-get install -y cloudflare-warp
-          sudo warp-cli --accept-tos register
-          sudo warp-cli --accept-tos set-mode warp+doh
+          sudo warp-cli --accept-tos registration new
+          sudo warp-cli --accept-tos mode warp+doh
+          if [ "${{ inputs.stack }}" == 'ipv4' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range ::0/0
+          elif [ "${{ inputs.stack }}" == 'ipv6' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range 0.0.0.0/0
+          fi
           sudo warp-cli --accept-tos connect
 
       - name: Setup terraform
