--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,24 +81,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # The public facing IP for the database is ipv6, GH does not support connecting to ipv6 addresses so we need this as a workaround.
-      # - name: Setup WARP
-      #   run: |
-      #     echo "WARP mode: client warp+doh."
-      #     sudo apt-get -y update
-      #     curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
-      #     echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
-      #     sudo apt-get update
-      #     sudo apt-get install -y cloudflare-warp
-      #     sudo warp-cli --accept-tos registration new
-      #     sudo warp-cli --accept-tos mode warp+doh
-      #     if [ "${{ inputs.stack }}" == 'ipv4' ]; then
-      #       sudo warp-cli --accept-tos tunnel ip add-range ::0/0
-      #     elif [ "${{ inputs.stack }}" == 'ipv6' ]; then
-      #       sudo warp-cli --accept-tos tunnel ip add-range 0.0.0.0/0
-      #     fi
-      #     sudo warp-cli --accept-tos connect
-
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -106,6 +88,24 @@ jobs:
 
       - name: Terraform Format
         run: terraform fmt -check
+
+        # The public facing IP for the database is ipv6, GH does not support connecting to ipv6 addresses so we need this as a workaround.
+      - name: Setup WARP
+        run: |
+          echo "WARP mode: client warp+doh."
+          sudo apt-get -y update
+          curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
+          sudo apt-get update
+          sudo apt-get install -y cloudflare-warp
+          sudo warp-cli --accept-tos registration new
+          sudo warp-cli --accept-tos mode warp+doh
+          if [ "${{ inputs.stack }}" == 'ipv4' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range ::0/0
+          elif [ "${{ inputs.stack }}" == 'ipv6' ]; then
+            sudo warp-cli --accept-tos tunnel ip add-range 0.0.0.0/0
+          fi
+          sudo warp-cli --accept-tos connect
 
       - name: Terraform Init
         run: terraform init -backend-config="conn_str=postgres://${{ secrets.TF_STATE_DB_USERNAME }}:${{ secrets.TF_STATE_DB_PASSWORD }}@${{ secrets.TF_STATE_DB_HOST }}:${{ secrets.TF_STATE_DB_PORT }}/${{ secrets.TF_STATE_DB_NAME }}?sslmode=disable"
